testdata/Call.switch_vc/m2p_m/m2p_m.2.13-new.check
// hasErrors: true
target/testdata/Call.switch_vc/m2p_m.scala:2: error: method without a parameter list overrides a method with a single empty one
class M2P_VC(val x: String) extends AnyVal with MU { def d   = "" }
                                                         ^
1 error
